--- a/web/package.json
+++ b/web/package.json
@@ -16,6 +16,7 @@
     "lodash.debounce": "^4.0.8",
     "moment": "^2.27.0",
     "nprogress": "^0.2.0",
+    "svg-sprite-loader": "^6.0.11",
     "vditor": "^3.8.7",
     "vue": "^2.6.11",
     "vue-router": "^3.5.3",
