--- a/web/package.json
+++ b/web/package.json
@@ -8,16 +8,25 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@milkdown/core": "^5.3.2",
+    "@milkdown/plugin-math": "^5.3.2",
+    "@milkdown/plugin-prism": "^5.3.2",
+    "@milkdown/preset-commonmark": "^5.3.2",
+    "@milkdown/theme-nord": "^5.3.2",
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
     "echarts": "^5.2.1",
     "element-ui": "^2.15.6",
-    "katex": "^0.13.18",
+    "github-markdown-css": "^5.1.0",
+    "katex": "0.6.0",
     "lodash.debounce": "^4.0.8",
+    "markdown-it": "^12.3.2",
+    "markdown-it-highlightjs": "^3.6.0",
+    "markdown-it-katex": "^2.0.3",
     "moment": "^2.27.0",
     "nprogress": "^0.2.0",
     "svg-sprite-loader": "^6.0.11",
-    "vditor": "^3.8.7",
+    "vditor": "^3.8.10",
     "vue": "^2.6.11",
     "vue-router": "^3.5.3",
     "vuex": "^3.1.3"
